Correction des marges sur les witchspells

--- a/app/src/main/res/layout/view_witchspells_book_item.xml
+++ b/app/src/main/res/layout/view_witchspells_book_item.xml
@@ -49,10 +49,10 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:paddingBottom="60dp"
-            android:paddingEnd="@dimen/spacing_xlarge"
-            android:paddingLeft="@dimen/spacing_xlarge"
-            android:paddingRight="@dimen/spacing_xlarge"
-            android:paddingStart="@dimen/spacing_xlarge"
+            android:paddingEnd="@dimen/spacing_large"
+            android:paddingLeft="@dimen/spacing_base"
+            android:paddingRight="@dimen/spacing_large"
+            android:paddingStart="@dimen/spacing_base"
             app:layoutManager="@{model.layoutManager}"
             app:layout_constraintBottom_toBottomOf="@id/witchspells_background"
             app:layout_constraintLeft_toLeftOf="@id/witchspells_background"
