--- a/app/src/main/res/layout/dialog_spell_grade.xml
+++ b/app/src/main/res/layout/dialog_spell_grade.xml
@@ -21,6 +21,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/spacing_xbig"
             android:layout_marginRight="@dimen/spacing_xbig"
+            android:paddingBottom="@dimen/spacing_xlarge"
             android:background="@{model.limitedGrade ? @drawable/card_spell_grade_gray_background : @drawable/card_spell_grade_background}">
 
             <android.support.constraint.Guideline
@@ -98,19 +99,6 @@
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/spell_grade_intelligence"
                 tools:text="affecte les animaux naturels (chevaux, lapins, loups, etc.)" />
-
-            <Button
-                android:id="@+id/spell_close_button"
-                style="@style/FlatButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:onClick="@{() -> model.onDismissClicked()}"
-                android:text="@string/Common_Close"
-                app:customFont="@{@string/regular_bold_font}"
-                android:layout_marginRight="@dimen/spacing_large"
-                app:layout_constraintBottom_toBottomOf="@id/bottom_guideline"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/spell_grade_effect" />
 
         </android.support.constraint.ConstraintLayout>
     </LinearLayout>
