--- a/app/src/main/res/layout/view_about_us.xml
+++ b/app/src/main/res/layout/view_about_us.xml
@@ -19,7 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            app:loadUrl='@{"file:///android_asset/html/about_us.html"}'/>
+            app:loadUrl="@{model.filepath}"/>
 
         <Button
             android:layout_width="wrap_content"
