--- a/app/src/main/res/layout/fragment_spells_stack.xml
+++ b/app/src/main/res/layout/fragment_spells_stack.xml
@@ -49,7 +49,7 @@
             app:layout_constraintWidth_max="@dimen/spell_card_max_width"
             app:layout_marginLeft="@{quickAccessModel == null ? @dimen/spell_margins : @dimen/spacing_base}"
             app:layout_marginRight="@{quickAccessModel == null ? @dimen/spell_margins : 0.0f}"
-            android:src="@{model.witchspellsMode ? @drawable/witchspells_book_background : @drawable/card_verso}"
+            android:src="@{model.getCardBackground(context)}"
             tools:src="@drawable/card_verso"
             app:layout_constraintDimensionRatio="H,161:225"
             app:layout_constraintLeft_toRightOf="@id/quick_access_recycler_view"
@@ -66,7 +66,7 @@
             android:textSize="@dimen/textSize_technical"
             android:gravity="center"
             app:customFont="@{@string/technical_font}"
-            android:textColor="@{model.witchspellsMode ? @android:color/white : @android:color/black}"
+            android:textColor="@{model.getBackgroundTextColor(context)}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="@id/spell_card_background"
             app:layout_constraintRight_toRightOf="@id/spell_card_background"
