--- a/app/src/main/res/layout/view_witchspells_book_item.xml
+++ b/app/src/main/res/layout/view_witchspells_book_item.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="model"
-            type="fr.enlight.anima.animamagiccards.ui.witchspells.viewmodels.WitchspellsBookViewModel" />
+            type="fr.enlight.anima.animamagiccards.ui.witchspells.viewmodels.homepage.WitchspellsBookViewModel" />
     </data>
 
     <android.support.constraint.ConstraintLayout
