--- a/app/src/main/res/layout/view_witchspells_chosen_spell.xml
+++ b/app/src/main/res/layout/view_witchspells_chosen_spell.xml
@@ -11,19 +11,19 @@
     </data>
 
     <android.support.constraint.ConstraintLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick="@{() -> model.onModifySpellClicked()}"
-        tools:background="@drawable/witchspells_book_background"
         android:paddingBottom="@dimen/spacing_large"
+        tools:background="@drawable/witchspells_book_background"
         tools:paddingTop="@dimen/spacing_big">
 
         <FrameLayout
             android:id="@+id/main_path_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="@dimen/spacing_base"
             android:onClick="@{() -> model.onModifySpellClicked()}"
+            android:padding="@dimen/spacing_base"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
@@ -41,6 +41,20 @@
                 tools:src="@drawable/card_icon_book_necromancer" />
         </FrameLayout>
 
+        <ImageButton
+            android:id="@+id/choosen_spell_delete_button"
+            style="@style/FlatButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/spacing_base"
+            android:layout_marginRight="@dimen/spacing_base"
+            android:contentDescription="@string/Common_Delete"
+            android:src="@drawable/ic_delete_white"
+            android:onClick="@{() -> model.onDeleteSpell()}"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <TextView
             android:id="@+id/spell_title"
             android:layout_width="wrap_content"
@@ -50,9 +64,11 @@
             android:text="@{model.spellTitle}"
             android:textColor="@android:color/white"
             android:textSize="@dimen/textSize_large"
-            app:layout_constraintLeft_toRightOf="@id/main_path_icon"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toTopOf="@+id/first_line_description"
+            app:layout_constraintHorizontal_bias="0"
+            app:layout_constraintLeft_toRightOf="@id/main_path_icon"
+            app:layout_constraintRight_toLeftOf="@id/choosen_spell_delete_button"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_chainStyle="packed"
             tools:text="Necromancie niv 20" />
 
@@ -72,10 +88,13 @@
             android:textColor="@android:color/white"
             android:textSize="@dimen/textSize_medium"
             android:textStyle="italic"
-            app:layout_constraintTop_toBottomOf="@id/spell_title"
-            app:layout_constraintLeft_toLeftOf="@id/spell_title"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0"
+            app:layout_constraintLeft_toLeftOf="@id/spell_title"
+            app:layout_constraintRight_toLeftOf="@id/choosen_spell_delete_button"
+            app:layout_constraintTop_toBottomOf="@id/spell_title"
             tools:text="Voie secondaire : Chaos" />
+
 
     </android.support.constraint.ConstraintLayout>
 </layout>
