Correction d'un bug empêchant d'afficher le message de chargement lorsque l'on passe d'un quick access à un autre

--- a/app/src/main/res/layout/fragment_spells_stack.xml
+++ b/app/src/main/res/layout/fragment_spells_stack.xml
@@ -64,6 +64,8 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:paddingBottom="@dimen/spacing_xbig"
+            android:paddingLeft="@dimen/spacing_large"
+            android:paddingRight="@dimen/spacing_large"
             android:text="@{model.messageMode ? @string/Spell_Empty_List_Message : @string/Common_Loading_Message}"
             android:textColor="@{model.getBackgroundTextColor(context)}"
             android:textSize="@dimen/textSize_technical"
