Modification pour étendre la portée du clic sur les listes de sorts sur la page d'accueil

--- a/app/src/main/res/layout/view_witchspells_path_item_reduced.xml
+++ b/app/src/main/res/layout/view_witchspells_path_item_reduced.xml
@@ -11,7 +11,7 @@
     </data>
 
     <android.support.constraint.ConstraintLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick="@{() -> model.onPathClicked()}"
         tools:background="@drawable/witchspells_book_background"
