--- a/app/src/main/res/layout/view_witchspells_chosen_spell_reduced.xml
+++ b/app/src/main/res/layout/view_witchspells_chosen_spell_reduced.xml
@@ -11,8 +11,9 @@
     </data>
 
     <android.support.constraint.ConstraintLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:onClick="@{() -> model.onModifySpellClicked()}"
         tools:background="@drawable/witchspells_book_background"
         tools:paddingTop="@dimen/spacing_big">
 
